--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     compile 'com.github.pellierd:pddl4j:3.7.2'
     compile name: 'pgslookandfeel-1.1.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
 }
 
 jar {
